# socket_practice

./: 03_low_level_file_access.c  04_endianess.c  05_inet_addr.c
BSD/: chat_kqueue_server.c
linux/: 07_echo_client01.c  11_udp_echo_server.c  12_udp_echo_client.c  13_file_server(shutdown).c  14_file_client(shutdown).c  15_gethostbyname.c  16_gethostbyaddr.c  19_fork_wait.c  20_signal.c  23_echo_mp_server.c  25_pipe.c  26_select.c  28_writev.c  29_readv.c  31_multicast_receiver.c  34_syscopy.c  35_stdcopy.c  38_echo_std_client.c  39_dup.c  43_mp_log_server.c  45_thread.c  47_semaphore.c  48_chat_server.c  49_chat_client.c  rssocklib.c  rssocklib.h
linux/chatting/: CMakeLists.txt
linux/chatting/src/client/: client_main.cpp  hello_client.c
linux/chatting/src/common/: packet.cpp  packet.hpp  session.cpp  session.hpp
linux/chatting/src/common/network/: packet_base.hpp  packet_handler.hpp  poll.cpp  poll.hpp  poll_manager.cpp  poll_manager.hpp  rssocket.cpp  rssocket.hpp  serialize.cpp  serialize.hpp  socket.cpp  socket.hpp  tools.cpp  tools.hpp
linux/chatting/src/common/thread/: semaphore.cpp  semaphore.hpp  thread_pool.cpp  thread_pool.hpp  thread_task.cpp  thread_task.hpp  ticker.cpp  ticker.hpp
linux/chatting/src/server/: chat_server.cpp  chat_server.hpp  client_handler.cpp  client_handler.hpp  client_session.cpp  client_session.hpp  client_socket_manager.cpp  client_socket_manager.hpp  hello_server.c  server_main.cpp  session_manager.cpp  session_manager.hpp  socket_manager.cpp  socket_manager.hpp
linux/legacies/: 01_hello_server.c  02_hello_client.c  (+22 more)
